!1363 适配高版本gcc * 适配高版本，修复编译器警告，添加 -Wno-deprecated-declarations 选项以忽略过时的声明警告。

--- a/kwdbts2/CMakeLists.txt
+++ b/kwdbts2/CMakeLists.txt
@@ -484,7 +484,7 @@ target_include_directories(${KWDBTS2_SERVER_LIB} PRIVATE
 	)
 
 set_target_properties(${KWDBTS2_SERVER_LIB} PROPERTIES
-  COMPILE_FLAGS " -fno-plt"
+  COMPILE_FLAGS " -fno-plt -Wno-deprecated-declarations"
   POSITION_INDEPENDENT_CODE ON
 )
 
